parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> import_stmt
Rule 5     statement -> class_def
Rule 6     statement -> func_def
Rule 7     statement -> if_stmt
Rule 8     statement -> assign_stmt
Rule 9     statement -> expr_stmt
Rule 10    import_stmt -> IMPORT IDENTIFIER
Rule 11    class_def -> CLASS IDENTIFIER LBRACE statements RBRACE
Rule 12    func_def -> DEF IDENTIFIER LPAREN param_list RPAREN LBRACE statements RBRACE
Rule 13    func_def -> DEF CREATE LPAREN param_list RPAREN LBRACE statements RBRACE
Rule 14    param_list -> param_list COMMA IDENTIFIER
Rule 15    param_list -> IDENTIFIER
Rule 16    param_list -> empty
Rule 17    if_stmt -> IF expression LBRACE statements RBRACE
Rule 18    assign_stmt -> expression EQUALS expression
Rule 19    expr_stmt -> expression
Rule 20    expression -> expression PLUS expression
Rule 21    expression -> expression MINUS expression
Rule 22    expression -> expression STAR expression
Rule 23    expression -> expression SLASH expression
Rule 24    expression -> expression LT expression
Rule 25    expression -> expression GT expression
Rule 26    expression -> expression LE expression
Rule 27    expression -> expression GE expression
Rule 28    expression -> expression EE expression
Rule 29    expression -> expression NE expression
Rule 30    expression -> expression LPAREN arg_list RPAREN
Rule 31    expression -> expression DOT IDENTIFIER
Rule 32    expression -> IDENTIFIER
Rule 33    expression -> NUMBER
Rule 34    expression -> STRING
Rule 35    expression -> OBJECT
Rule 36    arg_list -> arg_list COMMA expression
Rule 37    arg_list -> expression
Rule 38    arg_list -> empty
Rule 39    expression -> LPAREN expression RPAREN
Rule 40    empty -> <empty>

Terminals, with rules where they appear

CLASS                : 11
COMMA                : 14 36
CREATE               : 13
DEF                  : 12 13
DOT                  : 31
EE                   : 28
EQUALS               : 18
GE                   : 27
GT                   : 25
IDENTIFIER           : 10 11 12 14 15 31 32
IF                   : 17
IMPORT               : 10
LBRACE               : 11 12 13 17
LE                   : 26
LPAREN               : 12 13 30 39
LT                   : 24
MINUS                : 21
NE                   : 29
NUMBER               : 33
OBJECT               : 35
PLUS                 : 20
RBRACE               : 11 12 13 17
RPAREN               : 12 13 30 39
SLASH                : 23
STAR                 : 22
STRING               : 34
error                : 

Nonterminals, with rules where they appear

arg_list             : 30 36
assign_stmt          : 8
class_def            : 5
empty                : 16 38
expr_stmt            : 9
expression           : 17 18 18 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 36 37 39
func_def             : 6
if_stmt              : 7
import_stmt          : 4
param_list           : 12 13 14
program              : 0
statement            : 2 3
statements           : 1 2 11 12 13 17

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . import_stmt
    (5) statement -> . class_def
    (6) statement -> . func_def
    (7) statement -> . if_stmt
    (8) statement -> . assign_stmt
    (9) statement -> . expr_stmt
    (10) import_stmt -> . IMPORT IDENTIFIER
    (11) class_def -> . CLASS IDENTIFIER LBRACE statements RBRACE
    (12) func_def -> . DEF IDENTIFIER LPAREN param_list RPAREN LBRACE statements RBRACE
    (13) func_def -> . DEF CREATE LPAREN param_list RPAREN LBRACE statements RBRACE
    (17) if_stmt -> . IF expression LBRACE statements RBRACE
    (18) assign_stmt -> . expression EQUALS expression
    (19) expr_stmt -> . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression STAR expression
    (23) expression -> . expression SLASH expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EE expression
    (29) expression -> . expression NE expression
    (30) expression -> . expression LPAREN arg_list RPAREN
    (31) expression -> . expression DOT IDENTIFIER
    (32) expression -> . IDENTIFIER
    (33) expression -> . NUMBER
    (34) expression -> . STRING
    (35) expression -> . OBJECT
    (39) expression -> . LPAREN expression RPAREN

    IMPORT          shift and go to state 10
    CLASS           shift and go to state 12
    DEF             shift and go to state 13
    IF              shift and go to state 15
    IDENTIFIER      shift and go to state 11
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    OBJECT          shift and go to state 19
    LPAREN          shift and go to state 14

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    import_stmt                    shift and go to state 4
    class_def                      shift and go to state 5
    func_def                       shift and go to state 6
    if_stmt                        shift and go to state 7
    assign_stmt                    shift and go to state 8
    expr_stmt                      shift and go to state 9
    expression                     shift and go to state 16

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . import_stmt
    (5) statement -> . class_def
    (6) statement -> . func_def
    (7) statement -> . if_stmt
    (8) statement -> . assign_stmt
    (9) statement -> . expr_stmt
    (10) import_stmt -> . IMPORT IDENTIFIER
    (11) class_def -> . CLASS IDENTIFIER LBRACE statements RBRACE
    (12) func_def -> . DEF IDENTIFIER LPAREN param_list RPAREN LBRACE statements RBRACE
    (13) func_def -> . DEF CREATE LPAREN param_list RPAREN LBRACE statements RBRACE
    (17) if_stmt -> . IF expression LBRACE statements RBRACE
    (18) assign_stmt -> . expression EQUALS expression
    (19) expr_stmt -> . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression STAR expression
    (23) expression -> . expression SLASH expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EE expression
    (29) expression -> . expression NE expression
    (30) expression -> . expression LPAREN arg_list RPAREN
    (31) expression -> . expression DOT IDENTIFIER
    (32) expression -> . IDENTIFIER
    (33) expression -> . NUMBER
    (34) expression -> . STRING
    (35) expression -> . OBJECT
    (39) expression -> . LPAREN expression RPAREN

    $end            reduce using rule 1 (program -> statements .)
    IMPORT          shift and go to state 10
    CLASS           shift and go to state 12
    DEF             shift and go to state 13
    IF              shift and go to state 15
    IDENTIFIER      shift and go to state 11
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    OBJECT          shift and go to state 19
    LPAREN          shift and go to state 14

    statement                      shift and go to state 20
    import_stmt                    shift and go to state 4
    class_def                      shift and go to state 5
    func_def                       shift and go to state 6
    if_stmt                        shift and go to state 7
    assign_stmt                    shift and go to state 8
    expr_stmt                      shift and go to state 9
    expression                     shift and go to state 16

state 3

    (3) statements -> statement .

    IMPORT          reduce using rule 3 (statements -> statement .)
    CLASS           reduce using rule 3 (statements -> statement .)
    DEF             reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    IDENTIFIER      reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    STRING          reduce using rule 3 (statements -> statement .)
    OBJECT          reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> import_stmt .

    IMPORT          reduce using rule 4 (statement -> import_stmt .)
    CLASS           reduce using rule 4 (statement -> import_stmt .)
    DEF             reduce using rule 4 (statement -> import_stmt .)
    IF              reduce using rule 4 (statement -> import_stmt .)
    IDENTIFIER      reduce using rule 4 (statement -> import_stmt .)
    NUMBER          reduce using rule 4 (statement -> import_stmt .)
    STRING          reduce using rule 4 (statement -> import_stmt .)
    OBJECT          reduce using rule 4 (statement -> import_stmt .)
    LPAREN          reduce using rule 4 (statement -> import_stmt .)
    $end            reduce using rule 4 (statement -> import_stmt .)
    RBRACE          reduce using rule 4 (statement -> import_stmt .)


state 5

    (5) statement -> class_def .

    IMPORT          reduce using rule 5 (statement -> class_def .)
    CLASS           reduce using rule 5 (statement -> class_def .)
    DEF             reduce using rule 5 (statement -> class_def .)
    IF              reduce using rule 5 (statement -> class_def .)
    IDENTIFIER      reduce using rule 5 (statement -> class_def .)
    NUMBER          reduce using rule 5 (statement -> class_def .)
    STRING          reduce using rule 5 (statement -> class_def .)
    OBJECT          reduce using rule 5 (statement -> class_def .)
    LPAREN          reduce using rule 5 (statement -> class_def .)
    $end            reduce using rule 5 (statement -> class_def .)
    RBRACE          reduce using rule 5 (statement -> class_def .)


state 6

    (6) statement -> func_def .

    IMPORT          reduce using rule 6 (statement -> func_def .)
    CLASS           reduce using rule 6 (statement -> func_def .)
    DEF             reduce using rule 6 (statement -> func_def .)
    IF              reduce using rule 6 (statement -> func_def .)
    IDENTIFIER      reduce using rule 6 (statement -> func_def .)
    NUMBER          reduce using rule 6 (statement -> func_def .)
    STRING          reduce using rule 6 (statement -> func_def .)
    OBJECT          reduce using rule 6 (statement -> func_def .)
    LPAREN          reduce using rule 6 (statement -> func_def .)
    $end            reduce using rule 6 (statement -> func_def .)
    RBRACE          reduce using rule 6 (statement -> func_def .)


state 7

    (7) statement -> if_stmt .

    IMPORT          reduce using rule 7 (statement -> if_stmt .)
    CLASS           reduce using rule 7 (statement -> if_stmt .)
    DEF             reduce using rule 7 (statement -> if_stmt .)
    IF              reduce using rule 7 (statement -> if_stmt .)
    IDENTIFIER      reduce using rule 7 (statement -> if_stmt .)
    NUMBER          reduce using rule 7 (statement -> if_stmt .)
    STRING          reduce using rule 7 (statement -> if_stmt .)
    OBJECT          reduce using rule 7 (statement -> if_stmt .)
    LPAREN          reduce using rule 7 (statement -> if_stmt .)
    $end            reduce using rule 7 (statement -> if_stmt .)
    RBRACE          reduce using rule 7 (statement -> if_stmt .)


state 8

    (8) statement -> assign_stmt .

    IMPORT          reduce using rule 8 (statement -> assign_stmt .)
    CLASS           reduce using rule 8 (statement -> assign_stmt .)
    DEF             reduce using rule 8 (statement -> assign_stmt .)
    IF              reduce using rule 8 (statement -> assign_stmt .)
    IDENTIFIER      reduce using rule 8 (statement -> assign_stmt .)
    NUMBER          reduce using rule 8 (statement -> assign_stmt .)
    STRING          reduce using rule 8 (statement -> assign_stmt .)
    OBJECT          reduce using rule 8 (statement -> assign_stmt .)
    LPAREN          reduce using rule 8 (statement -> assign_stmt .)
    $end            reduce using rule 8 (statement -> assign_stmt .)
    RBRACE          reduce using rule 8 (statement -> assign_stmt .)


state 9

    (9) statement -> expr_stmt .

    IMPORT          reduce using rule 9 (statement -> expr_stmt .)
    CLASS           reduce using rule 9 (statement -> expr_stmt .)
    DEF             reduce using rule 9 (statement -> expr_stmt .)
    IF              reduce using rule 9 (statement -> expr_stmt .)
    IDENTIFIER      reduce using rule 9 (statement -> expr_stmt .)
    NUMBER          reduce using rule 9 (statement -> expr_stmt .)
    STRING          reduce using rule 9 (statement -> expr_stmt .)
    OBJECT          reduce using rule 9 (statement -> expr_stmt .)
    LPAREN          reduce using rule 9 (statement -> expr_stmt .)
    $end            reduce using rule 9 (statement -> expr_stmt .)
    RBRACE          reduce using rule 9 (statement -> expr_stmt .)


state 10

    (10) import_stmt -> IMPORT . IDENTIFIER

    IDENTIFIER      shift and go to state 21


state 11

    (32) expression -> IDENTIFIER .

    EQUALS          reduce using rule 32 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 32 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 32 (expression -> IDENTIFIER .)
    STAR            reduce using rule 32 (expression -> IDENTIFIER .)
    SLASH           reduce using rule 32 (expression -> IDENTIFIER .)
    LT              reduce using rule 32 (expression -> IDENTIFIER .)
    GT              reduce using rule 32 (expression -> IDENTIFIER .)
    LE              reduce using rule 32 (expression -> IDENTIFIER .)
    GE              reduce using rule 32 (expression -> IDENTIFIER .)
    EE              reduce using rule 32 (expression -> IDENTIFIER .)
    NE              reduce using rule 32 (expression -> IDENTIFIER .)
    LPAREN          reduce using rule 32 (expression -> IDENTIFIER .)
    DOT             reduce using rule 32 (expression -> IDENTIFIER .)
    IMPORT          reduce using rule 32 (expression -> IDENTIFIER .)
    CLASS           reduce using rule 32 (expression -> IDENTIFIER .)
    DEF             reduce using rule 32 (expression -> IDENTIFIER .)
    IF              reduce using rule 32 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 32 (expression -> IDENTIFIER .)
    NUMBER          reduce using rule 32 (expression -> IDENTIFIER .)
    STRING          reduce using rule 32 (expression -> IDENTIFIER .)
    OBJECT          reduce using rule 32 (expression -> IDENTIFIER .)
    $end            reduce using rule 32 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 32 (expression -> IDENTIFIER .)
    LBRACE          reduce using rule 32 (expression -> IDENTIFIER .)
    RBRACE          reduce using rule 32 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 32 (expression -> IDENTIFIER .)


state 12

    (11) class_def -> CLASS . IDENTIFIER LBRACE statements RBRACE

    IDENTIFIER      shift and go to state 22


state 13

    (12) func_def -> DEF . IDENTIFIER LPAREN param_list RPAREN LBRACE statements RBRACE
    (13) func_def -> DEF . CREATE LPAREN param_list RPAREN LBRACE statements RBRACE

    IDENTIFIER      shift and go to state 23
    CREATE          shift and go to state 24


state 14

    (39) expression -> LPAREN . expression RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression STAR expression
    (23) expression -> . expression SLASH expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EE expression
    (29) expression -> . expression NE expression
    (30) expression -> . expression LPAREN arg_list RPAREN
    (31) expression -> . expression DOT IDENTIFIER
    (32) expression -> . IDENTIFIER
    (33) expression -> . NUMBER
    (34) expression -> . STRING
    (35) expression -> . OBJECT
    (39) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 11
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    OBJECT          shift and go to state 19
    LPAREN          shift and go to state 14

    expression                     shift and go to state 25

state 15

    (17) if_stmt -> IF . expression LBRACE statements RBRACE
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression STAR expression
    (23) expression -> . expression SLASH expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EE expression
    (29) expression -> . expression NE expression
    (30) expression -> . expression LPAREN arg_list RPAREN
    (31) expression -> . expression DOT IDENTIFIER
    (32) expression -> . IDENTIFIER
    (33) expression -> . NUMBER
    (34) expression -> . STRING
    (35) expression -> . OBJECT
    (39) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 11
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    OBJECT          shift and go to state 19
    LPAREN          shift and go to state 14

    expression                     shift and go to state 26

state 16

    (18) assign_stmt -> expression . EQUALS expression
    (19) expr_stmt -> expression .
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . STAR expression
    (23) expression -> expression . SLASH expression
    (24) expression -> expression . LT expression
    (25) expression -> expression . GT expression
    (26) expression -> expression . LE expression
    (27) expression -> expression . GE expression
    (28) expression -> expression . EE expression
    (29) expression -> expression . NE expression
    (30) expression -> expression . LPAREN arg_list RPAREN
    (31) expression -> expression . DOT IDENTIFIER

  ! shift/reduce conflict for LPAREN resolved as shift
    EQUALS          shift and go to state 27
    IMPORT          reduce using rule 19 (expr_stmt -> expression .)
    CLASS           reduce using rule 19 (expr_stmt -> expression .)
    DEF             reduce using rule 19 (expr_stmt -> expression .)
    IF              reduce using rule 19 (expr_stmt -> expression .)
    IDENTIFIER      reduce using rule 19 (expr_stmt -> expression .)
    NUMBER          reduce using rule 19 (expr_stmt -> expression .)
    STRING          reduce using rule 19 (expr_stmt -> expression .)
    OBJECT          reduce using rule 19 (expr_stmt -> expression .)
    $end            reduce using rule 19 (expr_stmt -> expression .)
    RBRACE          reduce using rule 19 (expr_stmt -> expression .)
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    STAR            shift and go to state 30
    SLASH           shift and go to state 31
    LT              shift and go to state 32
    GT              shift and go to state 33
    LE              shift and go to state 34
    GE              shift and go to state 35
    EE              shift and go to state 36
    NE              shift and go to state 37
    LPAREN          shift and go to state 38
    DOT             shift and go to state 39

  ! LPAREN          [ reduce using rule 19 (expr_stmt -> expression .) ]


state 17

    (33) expression -> NUMBER .

    EQUALS          reduce using rule 33 (expression -> NUMBER .)
    PLUS            reduce using rule 33 (expression -> NUMBER .)
    MINUS           reduce using rule 33 (expression -> NUMBER .)
    STAR            reduce using rule 33 (expression -> NUMBER .)
    SLASH           reduce using rule 33 (expression -> NUMBER .)
    LT              reduce using rule 33 (expression -> NUMBER .)
    GT              reduce using rule 33 (expression -> NUMBER .)
    LE              reduce using rule 33 (expression -> NUMBER .)
    GE              reduce using rule 33 (expression -> NUMBER .)
    EE              reduce using rule 33 (expression -> NUMBER .)
    NE              reduce using rule 33 (expression -> NUMBER .)
    LPAREN          reduce using rule 33 (expression -> NUMBER .)
    DOT             reduce using rule 33 (expression -> NUMBER .)
    IMPORT          reduce using rule 33 (expression -> NUMBER .)
    CLASS           reduce using rule 33 (expression -> NUMBER .)
    DEF             reduce using rule 33 (expression -> NUMBER .)
    IF              reduce using rule 33 (expression -> NUMBER .)
    IDENTIFIER      reduce using rule 33 (expression -> NUMBER .)
    NUMBER          reduce using rule 33 (expression -> NUMBER .)
    STRING          reduce using rule 33 (expression -> NUMBER .)
    OBJECT          reduce using rule 33 (expression -> NUMBER .)
    $end            reduce using rule 33 (expression -> NUMBER .)
    RPAREN          reduce using rule 33 (expression -> NUMBER .)
    LBRACE          reduce using rule 33 (expression -> NUMBER .)
    RBRACE          reduce using rule 33 (expression -> NUMBER .)
    COMMA           reduce using rule 33 (expression -> NUMBER .)


state 18

    (34) expression -> STRING .

    EQUALS          reduce using rule 34 (expression -> STRING .)
    PLUS            reduce using rule 34 (expression -> STRING .)
    MINUS           reduce using rule 34 (expression -> STRING .)
    STAR            reduce using rule 34 (expression -> STRING .)
    SLASH           reduce using rule 34 (expression -> STRING .)
    LT              reduce using rule 34 (expression -> STRING .)
    GT              reduce using rule 34 (expression -> STRING .)
    LE              reduce using rule 34 (expression -> STRING .)
    GE              reduce using rule 34 (expression -> STRING .)
    EE              reduce using rule 34 (expression -> STRING .)
    NE              reduce using rule 34 (expression -> STRING .)
    LPAREN          reduce using rule 34 (expression -> STRING .)
    DOT             reduce using rule 34 (expression -> STRING .)
    IMPORT          reduce using rule 34 (expression -> STRING .)
    CLASS           reduce using rule 34 (expression -> STRING .)
    DEF             reduce using rule 34 (expression -> STRING .)
    IF              reduce using rule 34 (expression -> STRING .)
    IDENTIFIER      reduce using rule 34 (expression -> STRING .)
    NUMBER          reduce using rule 34 (expression -> STRING .)
    STRING          reduce using rule 34 (expression -> STRING .)
    OBJECT          reduce using rule 34 (expression -> STRING .)
    $end            reduce using rule 34 (expression -> STRING .)
    RPAREN          reduce using rule 34 (expression -> STRING .)
    LBRACE          reduce using rule 34 (expression -> STRING .)
    RBRACE          reduce using rule 34 (expression -> STRING .)
    COMMA           reduce using rule 34 (expression -> STRING .)


state 19

    (35) expression -> OBJECT .

    EQUALS          reduce using rule 35 (expression -> OBJECT .)
    PLUS            reduce using rule 35 (expression -> OBJECT .)
    MINUS           reduce using rule 35 (expression -> OBJECT .)
    STAR            reduce using rule 35 (expression -> OBJECT .)
    SLASH           reduce using rule 35 (expression -> OBJECT .)
    LT              reduce using rule 35 (expression -> OBJECT .)
    GT              reduce using rule 35 (expression -> OBJECT .)
    LE              reduce using rule 35 (expression -> OBJECT .)
    GE              reduce using rule 35 (expression -> OBJECT .)
    EE              reduce using rule 35 (expression -> OBJECT .)
    NE              reduce using rule 35 (expression -> OBJECT .)
    LPAREN          reduce using rule 35 (expression -> OBJECT .)
    DOT             reduce using rule 35 (expression -> OBJECT .)
    IMPORT          reduce using rule 35 (expression -> OBJECT .)
    CLASS           reduce using rule 35 (expression -> OBJECT .)
    DEF             reduce using rule 35 (expression -> OBJECT .)
    IF              reduce using rule 35 (expression -> OBJECT .)
    IDENTIFIER      reduce using rule 35 (expression -> OBJECT .)
    NUMBER          reduce using rule 35 (expression -> OBJECT .)
    STRING          reduce using rule 35 (expression -> OBJECT .)
    OBJECT          reduce using rule 35 (expression -> OBJECT .)
    $end            reduce using rule 35 (expression -> OBJECT .)
    RPAREN          reduce using rule 35 (expression -> OBJECT .)
    LBRACE          reduce using rule 35 (expression -> OBJECT .)
    RBRACE          reduce using rule 35 (expression -> OBJECT .)
    COMMA           reduce using rule 35 (expression -> OBJECT .)


state 20

    (2) statements -> statements statement .

    IMPORT          reduce using rule 2 (statements -> statements statement .)
    CLASS           reduce using rule 2 (statements -> statements statement .)
    DEF             reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    IDENTIFIER      reduce using rule 2 (statements -> statements statement .)
    NUMBER          reduce using rule 2 (statements -> statements statement .)
    STRING          reduce using rule 2 (statements -> statements statement .)
    OBJECT          reduce using rule 2 (statements -> statements statement .)
    LPAREN          reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    RBRACE          reduce using rule 2 (statements -> statements statement .)


state 21

    (10) import_stmt -> IMPORT IDENTIFIER .

    IMPORT          reduce using rule 10 (import_stmt -> IMPORT IDENTIFIER .)
    CLASS           reduce using rule 10 (import_stmt -> IMPORT IDENTIFIER .)
    DEF             reduce using rule 10 (import_stmt -> IMPORT IDENTIFIER .)
    IF              reduce using rule 10 (import_stmt -> IMPORT IDENTIFIER .)
    IDENTIFIER      reduce using rule 10 (import_stmt -> IMPORT IDENTIFIER .)
    NUMBER          reduce using rule 10 (import_stmt -> IMPORT IDENTIFIER .)
    STRING          reduce using rule 10 (import_stmt -> IMPORT IDENTIFIER .)
    OBJECT          reduce using rule 10 (import_stmt -> IMPORT IDENTIFIER .)
    LPAREN          reduce using rule 10 (import_stmt -> IMPORT IDENTIFIER .)
    $end            reduce using rule 10 (import_stmt -> IMPORT IDENTIFIER .)
    RBRACE          reduce using rule 10 (import_stmt -> IMPORT IDENTIFIER .)


state 22

    (11) class_def -> CLASS IDENTIFIER . LBRACE statements RBRACE

    LBRACE          shift and go to state 40


state 23

    (12) func_def -> DEF IDENTIFIER . LPAREN param_list RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 41


state 24

    (13) func_def -> DEF CREATE . LPAREN param_list RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 42


state 25

    (39) expression -> LPAREN expression . RPAREN
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . STAR expression
    (23) expression -> expression . SLASH expression
    (24) expression -> expression . LT expression
    (25) expression -> expression . GT expression
    (26) expression -> expression . LE expression
    (27) expression -> expression . GE expression
    (28) expression -> expression . EE expression
    (29) expression -> expression . NE expression
    (30) expression -> expression . LPAREN arg_list RPAREN
    (31) expression -> expression . DOT IDENTIFIER

    RPAREN          shift and go to state 43
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    STAR            shift and go to state 30
    SLASH           shift and go to state 31
    LT              shift and go to state 32
    GT              shift and go to state 33
    LE              shift and go to state 34
    GE              shift and go to state 35
    EE              shift and go to state 36
    NE              shift and go to state 37
    LPAREN          shift and go to state 38
    DOT             shift and go to state 39


state 26

    (17) if_stmt -> IF expression . LBRACE statements RBRACE
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . STAR expression
    (23) expression -> expression . SLASH expression
    (24) expression -> expression . LT expression
    (25) expression -> expression . GT expression
    (26) expression -> expression . LE expression
    (27) expression -> expression . GE expression
    (28) expression -> expression . EE expression
    (29) expression -> expression . NE expression
    (30) expression -> expression . LPAREN arg_list RPAREN
    (31) expression -> expression . DOT IDENTIFIER

    LBRACE          shift and go to state 44
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    STAR            shift and go to state 30
    SLASH           shift and go to state 31
    LT              shift and go to state 32
    GT              shift and go to state 33
    LE              shift and go to state 34
    GE              shift and go to state 35
    EE              shift and go to state 36
    NE              shift and go to state 37
    LPAREN          shift and go to state 38
    DOT             shift and go to state 39


state 27

    (18) assign_stmt -> expression EQUALS . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression STAR expression
    (23) expression -> . expression SLASH expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EE expression
    (29) expression -> . expression NE expression
    (30) expression -> . expression LPAREN arg_list RPAREN
    (31) expression -> . expression DOT IDENTIFIER
    (32) expression -> . IDENTIFIER
    (33) expression -> . NUMBER
    (34) expression -> . STRING
    (35) expression -> . OBJECT
    (39) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 11
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    OBJECT          shift and go to state 19
    LPAREN          shift and go to state 14

    expression                     shift and go to state 45

state 28

    (20) expression -> expression PLUS . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression STAR expression
    (23) expression -> . expression SLASH expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EE expression
    (29) expression -> . expression NE expression
    (30) expression -> . expression LPAREN arg_list RPAREN
    (31) expression -> . expression DOT IDENTIFIER
    (32) expression -> . IDENTIFIER
    (33) expression -> . NUMBER
    (34) expression -> . STRING
    (35) expression -> . OBJECT
    (39) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 11
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    OBJECT          shift and go to state 19
    LPAREN          shift and go to state 14

    expression                     shift and go to state 46

state 29

    (21) expression -> expression MINUS . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression STAR expression
    (23) expression -> . expression SLASH expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EE expression
    (29) expression -> . expression NE expression
    (30) expression -> . expression LPAREN arg_list RPAREN
    (31) expression -> . expression DOT IDENTIFIER
    (32) expression -> . IDENTIFIER
    (33) expression -> . NUMBER
    (34) expression -> . STRING
    (35) expression -> . OBJECT
